ajustes realizado nos clients

--- a/src/WebAppDesafio.MVC/WebAppDesafio.MVC.csproj
+++ b/src/WebAppDesafio.MVC/WebAppDesafio.MVC.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Reporting" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="wwwroot\css\site.css">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
