ajustes realizados na camada de api e mvc

--- a/src/WebAppDesafio.API/appsettings.Development.json
+++ b/src/WebAppDesafio.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=app.db"
+    "DefaultConnection": "Data Source=DesafioDB.db"
   }
 }
