--- a/src/WebAppDesafio.API/WebAppDesafio.API.csproj
+++ b/src/WebAppDesafio.API/WebAppDesafio.API.csproj
@@ -7,15 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.33" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.33">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="Asp.Versioning.Http" Version="6.5.0" />
-    <PackageReference Include="Asp.Versioning.Mvc" Version="6.4.1" />
-    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="6.4.0" />
+   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.33" />
+   <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.33" />
+   <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+   <PackageReference Include="Asp.Versioning.Http" Version="6.5.0" />
+   <PackageReference Include="Asp.Versioning.Mvc" Version="6.4.1" />
+   <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
