adicionado feature onde é possivel extrair os dados de departamento para um relatório pdf

--- a/src/WebAppDesafio.MVC/WebAppDesafio.MVC.csproj
+++ b/src/WebAppDesafio.MVC/WebAppDesafio.MVC.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.Reporting" Version="2.1.0" />
+    <Content Remove="wwwroot\reports\rptDepartamentos.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\reports\rptDepartamentos.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="ReportViewerCore.NETCore" Version="15.1.22" />
   </ItemGroup>
 
   <ItemGroup>
