--- a/src/WinFormDesafio/WinFormDesafio.csproj
+++ b/src/WinFormDesafio/WinFormDesafio.csproj
@@ -14,8 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="rptDepartamentos.rdlc">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="rptChamados.rdlc" />
-    <EmbeddedResource Include="rptDepartamentos.rdlc" />
   </ItemGroup>
 
   <ItemGroup>
