--- a/src/WebAppDesafio.MVC/appsettings.Production.json
+++ b/src/WebAppDesafio.MVC/appsettings.Production.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiSettings": {
+    "BaseUrl": "url production"
   }
 }
