ajustado relatórios, agora os relatórios são gerados com os dados que já estão no front-end, não necessitando fazer buscas no servidor.

--- a/src/WinFormDesafio/WinFormDesafio.csproj
+++ b/src/WinFormDesafio/WinFormDesafio.csproj
@@ -17,6 +17,7 @@
     <Content Include="rptDepartamentos.rdlc">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
