--- a/src/WebAppDesafio.MVC/WebAppDesafio.MVC.csproj
+++ b/src/WebAppDesafio.MVC/WebAppDesafio.MVC.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\reports\rptChamados.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\reports\rptChamados.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="ReportViewerCore.NETCore" Version="15.1.22" />
   </ItemGroup>
@@ -439,9 +447,6 @@
     <Content Update="wwwroot\lib\sweetalert2\sweetalert2.min.css">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Update="wwwroot\reports\rptChamados.rdlc">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\reports\rptDepartamentos.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
